--- a/View/View/Base.lproj/Main.storyboard
+++ b/View/View/Base.lproj/Main.storyboard
@@ -16,40 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleAspectFit" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pOu-MM-PDA">
-                                <rect key="frame" x="16" y="42" width="314" height="162"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="fdN-uf-4na"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="rth-bl-ik7"/>
-                                </connections>
-                            </pickerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKV-Z9-qWZ">
-                                <rect key="frame" x="46" y="346" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Wd-OW-5Pf">
-                                <rect key="frame" x="152" y="346" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="749-tN-SrH">
-                                <rect key="frame" x="256" y="346" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ijt-gm-k0g">
+                                <rect key="frame" x="23" y="102" width="325" height="3"/>
+                                <color key="progressTintColor" red="0.10642716860440959" green="0.47960143856017434" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="trackTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </progressView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="label0" destination="LKV-Z9-qWZ" id="QHS-UO-cfi"/>
-                        <outlet property="label1" destination="5Wd-OW-5Pf" id="xhp-qV-KnE"/>
-                        <outlet property="label2" destination="749-tN-SrH" id="ohW-Bt-Xk4"/>
-                        <outlet property="pickview1" destination="pOu-MM-PDA" id="pvH-iZ-Jg7"/>
+                        <outlet property="pg1" destination="ijt-gm-k0g" id="TIx-FD-tRz"/>
+                        <outlet property="view" destination="8bC-Xf-vdC" id="ahw-Vd-ED1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
